More patches and cleanup.
* Cleaned up how the Media Library HTML renders when uploading a file or pushing a config to an Anvil! when known_hosts has to be populated.
* Fixed the alert system to send emails when a server is deleted.
* Added a "Back" button to the Media Library's home page to return to the being-managed Anvil!
* Updated the new installer to set the 'root' password to the same password set for the Striker htpasswd user.
* Updated the alert system to not send emails when the BBU hold-up hours increase.

v1.1.5 gets closer and closer!

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -113,13 +113,26 @@
 		</td>
 		<td>
 			<br />
-			#!string!message_0052!#:</br>
+			#!string!message_0052!#:<br />
 			<br />
 <!-- end restart-guacamole-header -->
 
+<!-- start open-shell-call-output -->
+	<tr>
+		<td class="highlight_note">
+			#!string!row_0127!#
+		</td>
+		<td>
+<!-- end open-shell-call-output -->
+
 <!-- start shell-call-output -->
-			<span class="fixed_width"><span class="code">#!replace!line!#</span></span><br />
+			<span class="fixed_width">#!replace!line!#</span><br />
 <!-- end shell-call-output -->
+
+<!-- start close-shell-call-output -->
+		</td>
+	</tr>
+<!-- end close-shell-call-output -->
 
 <!-- start restart-guacamole-footer -->
 			<br />
@@ -131,7 +144,7 @@
 		</td>
 		<td>
 			<br />
-			#!string!explain_0019!#</br>
+			#!string!explain_0019!#<br />
 			<br />
 		</td>
 	</tr>
