--- a/html/skins/alteeve/media-library.html
+++ b/html/skins/alteeve/media-library.html
@@ -20,6 +20,8 @@
 			<br />
 			<span class="fixed_width">#!replace!base!#</span><br />
 			<br />
+		</td>
+	</tr>
 <!-- end download-website-header -->
 
 <!-- start download-website-complete -->
@@ -32,8 +34,6 @@
 <!-- end download-website-progress -->
 
 <!-- start download-website-footer -->
-		</td>
-	</tr>
 	<tr>
 		<td class="highlight_good">
 			Done!
@@ -106,6 +106,8 @@
 			<br />
 			#!string!explain_0049!#<br />
 			<br />
+		</td>
+	</tr>
 <!-- end save-to-disk-header -->
 
 <!-- start save-to-disk-no-file -->
@@ -123,8 +125,6 @@
 <!-- end save-to-disk-no-file -->
 
 <!-- start save-to-disk-starting -->
-		</td>
-	</tr>
 	<tr>
 		<td class="highlight_good" colspan="2">
 			#!string!title_0125!#<br />
@@ -140,11 +140,11 @@
 			<br />
 			#!string!explain_0049!#<br />
 			<br />
+		</td>
+	</tr>
 <!-- end save-to-disk-starting -->
 
 <!-- start save-to-disk-failed -->
-		</tr>
-	</tr>
 	<tr>
 		<td class="highlight_warning_bold">
 			#!string!row_0133!#
@@ -158,8 +158,6 @@
 <!-- end save-to-disk-failed -->
 
 <!-- start save-to-disk-success -->
-		</tr>
-	</tr>
 	<tr>
 		<td class="highlight_good">
 			#!string!row_0154!#
@@ -313,12 +311,11 @@
 			<br />
 			#!replace!message!#<br />
 			<br />
+		</td>
+	</tr>
 <!-- end image-and-upload-proceed-header -->
 
 <!-- start image-and-upload-proceed-uploading -->
-			<br />
-		</td>
-	</tr>
 	<tr>
 		<td class="highlight_ready_bold">
 			#!string!title_0131!#
@@ -330,6 +327,8 @@
 			#!string!explain_0052!#<br />
 			#!string!explain_0053!#<br />
 			<br />
+		</td>
+	</tr>
 <!-- end image-and-upload-proceed-uploading -->
 
 <!-- start image-and-upload-proceed-failed -->
@@ -346,6 +345,8 @@
 			<br />
 			#!replace!error!#<br />
 			<br />
+		</td>
+	</tr>
 <!-- end image-and-upload-proceed-failed -->
 
 <!-- start image-and-upload-proceed-upload-failed -->
@@ -367,8 +368,6 @@
 <!-- end image-and-upload-proceed-upload-success -->
 
 <!-- start image-and-upload-proceed-footer -->
-		</td>
-	</tr>
 	<tr>
 		<td class="highlight_ready_bold">
 			#!string!message_0120!#<br />
@@ -400,10 +399,10 @@
 			<span class="highlight_ready_bold"><b>#!string!row_0138!#</b></span>
 		</td>
 		<td colspan="2">
-			</br />
+			<br />
 			#!string!message_0311!#<br >
 			<i>#!string!message_0312!#</i><br />
-			</br />
+			<br />
 		</td>
 	</tr>
 	<tr>
@@ -481,11 +480,11 @@
 			<br />
 			#!string!message_0317!#<br />
 			<br />
+		</td>
+	</tr>
 <!-- end file-delete-header -->
 
 <!-- start file-delete-footer -->
-		</td>
-	</tr>
 	<tr>
 		<td colspan="3" class="highlight_ready_bold">
 			#!string!message_0120!#
@@ -615,7 +614,6 @@
 <!-- end read-shared-file-entry -->
 
 <!-- start read-shared-optical-drive-header -->
-	<tr>
 </table>
 <br />
 <table width="100%">
@@ -729,7 +727,7 @@
 		</td>
 		<td colspan="3">
 			<br />
-			<i>#!string!message_0326!#</i></br />
+			<i>#!string!message_0326!#</i><br />
 			#!string!message_0327!#<br />
 			<br />
 		</td>
