--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -453,7 +453,7 @@
 		</td>
 		<td>
 			<br />
-			#!string!message_0090!#</br >
+			#!string!message_0090!#<br />
 			<br />
 <!-- end add-server-to-anvil-header -->
 
@@ -576,8 +576,8 @@
 		<td>
 			<br />
 			#!string!message_0105!#<br />
-			<i>#!string!message_0106!#</i></br />
-			#!string!message_0107!#</br >
+			<i>#!string!message_0106!#</i><br />
+			#!string!message_0107!#<br />
 			<br />
 <!-- end add-server-to-anvil-add-to-rgmanager -->
 
@@ -1761,7 +1761,7 @@
 <!-- end delete-server-start -->
 
 <!-- start delete-server-bad-exit-code -->
-			</br >
+			<br />
 			<span class="highlight_bad"><b>#!string!row_0096!#</b></span> #!string!message_0068!#<br />
 			#!replace!error!#<br />
 			#!string!brand_0011!#<br />
