Last commit before 1.1.5!
* This fixed up some more formatting issues with Media Library.
* Swapped the daemon restart oreder in restart_tomcat() and made it retry up to three times if one of the daemons fails to start.

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/media-library.html
+++ b/html/skins/alteeve/media-library.html
@@ -3,11 +3,14 @@
 <!-- start download-website-header -->
 <table align="center">
 	<tr>
-		<td class="highlight_ready_bold">
+		<td class="highlight_ready_bold" colspan="2">
 			#!string!title_0121!#
 		</td>
 	</tr>
 	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0099!#
+		</td>
 		<td>
 			<br />
 			<span class="highlight_warning"><b>#!string!message_0106!#</b></span><br />
@@ -35,8 +38,8 @@
 
 <!-- start download-website-footer -->
 	<tr>
-		<td class="highlight_good">
-			Done!
+		<td class="highlight_good_bold" colspan="2">
+			#!string!row_0019!#
 		</td>
 	</tr>
 </table>
@@ -298,11 +301,14 @@
 <!-- start image-and-upload-proceed-header -->
 <table align="center">
 	<tr>
-		<td class="highlight_ready_bold">
+		<td class="highlight_ready_bold" colspan="2">
 			#!string!title_0130!#
 		</td>
 	</tr>
 	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0099!#
+		</td>
 		<td>
 			<br />
 			<span class="highlight_warning">#!string!message_0106!#</span><br />
@@ -318,11 +324,11 @@
 <!-- start image-and-upload-proceed-uploading -->
 	<tr>
 		<td class="highlight_ready_bold">
-			#!string!title_0131!#
+			#!string!row_0135!#
 		</td>
-	</tr>
-	<tr>
 		<td>
+			<br />
+			#!string!title_0131!#<br />
 			<br />
 			#!string!explain_0052!#<br />
 			#!string!explain_0053!#<br />
@@ -332,16 +338,13 @@
 <!-- end image-and-upload-proceed-uploading -->
 
 <!-- start image-and-upload-proceed-failed -->
-			<br />
-		</td>
-	</tr>
 	<tr>
 		<td class="highlight_bad_bold">
-			#!string!title_0146!#
+			#!string!row_0133!#
 		</td>
-	</tr>
-	<tr>
 		<td>
+			<br />
+			#!string!title_0146!#<br />
 			<br />
 			#!replace!error!#<br />
 			<br />
@@ -350,26 +353,47 @@
 <!-- end image-and-upload-proceed-failed -->
 
 <!-- start image-and-upload-proceed-upload-failed -->
+	<tr>
+		<td class="highlight_bad_bold">
+			#!string!row_0133!#
+		</td>
+		<td>
 			<br />
 			#!string!message_0309!#<br />
 			<br />
+		</td>
+	</tr>
 <!-- end image-and-upload-proceed-upload-failed -->
 
 <!-- start image-and-upload-expect-not-found -->
+	<tr>
+		<td class="highlight_warning_bold">
+			#!string!row_0044!#
+		</td>
+		<td>
 			<br />
 			#!string!message_0334!#<br />
 			<br />
+		</td>
+	</tr>
 <!-- end image-and-upload-expect-not-found -->
 
 <!-- start image-and-upload-proceed-upload-success -->
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0083!#
+		</td>
+		<td>
 			<br />
 			#!string!message_0310!#<br />
 			<br />
+		</td>
+	</tr>
 <!-- end image-and-upload-proceed-upload-success -->
 
 <!-- start image-and-upload-proceed-footer -->
 	<tr>
-		<td class="highlight_ready_bold">
+		<td class="highlight_ready_bold" colspan="2">
 			#!string!message_0120!#<br />
 		</td>
 	</tr>
