--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -707,6 +707,10 @@
 			<br />
 			#!replace!icon!#<br />
 			<br />
+			<hr>
+			#!string!message_0329!#<br />
+			<hr>
+			<br />
 		</td>
 	</tr>
 	<tr>
@@ -716,6 +720,16 @@
 		<td>
 			<br />
 			#!string!message_0124!#<br />
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0089!#
+		</td>
+		<td>
+			<br />
+			#!replace!restart_tomcat!#<br />
 			<br />
 		</td>
 <!-- end provision-server-install-started -->
