--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -225,3 +225,53 @@
 <!-- start form-input-no-class-defined-width -->
 			<input type="#!replace!type!#" name="#!replace!name!#" id="#!replace!id!#" value="#!replace!value!#" style="width: #!replace!width!#;">
 <!-- end form-input-no-class-defined-width -->
+
+<!-- start bad-definition-file -->
+<table>
+	<tr>
+		<td colspan="2" class="highlight_warning_bold">
+			#!string!title_0147!#
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_bad_bold">
+			#!string!row_0096!#
+		</td>
+		<td>
+			<br />
+			#!string!message_0337!#<br />
+			<br />
+			#!replace!error!#<br />
+			<br />
+			<hr />
+			<span class="code">#!replace!definition_content!#<span><br />
+			<hr />
+			</br>
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end bad-definition-file -->
+
+<!-- start no-definition-file -->
+<table>
+	<tr>
+		<td colspan="2" class="highlight_warning_bold">
+			#!string!title_0147!#
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_bad_bold">
+			#!string!row_0096!#
+		</td>
+		<td>
+			<br />
+			#!string!message_0337!#<br />
+			<br />
+			#!replace!error!#<br />
+			<br />
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end no-definition-file -->
