--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -302,7 +302,7 @@
 			&nbsp;
 		</td>
 		<td colspan="2" rowspan="5">
-			<input type="submit" name="change" value="#!string!button_0019!#" class="bold_button"">
+			<input type="submit" name="change" value="#!string!button_0019!#" class="bold_button">
 		</td>
 	</tr>
 	<tr><td style="height:10px; padding:0px" colspan="3"></td></tr>
@@ -457,9 +457,54 @@
 			<br />
 <!-- end add-server-to-anvil-header -->
 
+<!-- start one-line-message-header -->
+<table>
+	<tr>
+		<td>
+<!-- end one-line-message-header -->
+
+<!-- start one-line-message-header-hidden -->
+<table class="hidden_table">
+	<tr>
+		<td>
+<!-- end one-line-message-header-hidden -->
+
 <!-- start one-line-message -->
 			#!replace!message!#<br />
 <!-- end one-line-message -->
+
+<!-- start one-line-message-footer -->
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end one-line-message-footer -->
+
+<!-- start switch-to-vnc-header -->
+<table>
+	<tr>
+		<td colspan="2" class="highlight_note_bold">
+			#!string!title_0148!#
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_note_bold">
+			#!string!row_0032!#
+		</td>
+		<td>
+			<br />
+			#!string!message_0342!#<br />
+			<br />
+<!-- end switch-to-vnc-header -->
+
+<!-- start switch-to-vnc-footer -->
+			#!string!message_0120!#<br />
+			<br />
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end switch-to-vnc-footer -->
 
 <!-- start one-line-message-fixed-width -->
 			<span class="fixed_width">#!replace!message!#</span><br />
