Started work on a new manifest creation function. This will eventually generate an XML file that will be passed to a script that runs on freshly installed nodes and configures them for use as Anvil! nodes based on the manifest data and the specified node.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>AN!CusterDashboard</title>
+	<title>Striker</title>
 	<META HTTP-EQUIV="Refresh" CONTENT="0; URL=cgi-bin/an-cdb">
 </head>
 <body>
