--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -7,7 +7,6 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>#!string!brand_0001!# - #!string!brand_0002!#</title>
 	<link rel="stylesheet" href="#!conf!url::skins!#/#!conf!sys::skin!#/common.css" media="screen" />
-	<script type="text/javascript" src="#!conf!url::skins!#/#!conf!sys::skin!#/common.js"></script>
 	<script type="text/javascript" src="#!conf!url::skins!#/#!conf!sys::skin!#/jquery-latest.js"></script>
 </head>
 <body>
@@ -44,6 +43,8 @@
 </body>
 <img src="#!conf!url::skins!#/#!conf!sys::skin!#/images/t.png" onload="show_on_load();" border="0" />
 <img src="#!conf!url::skins!#/#!conf!sys::skin!#/images/t.png" onload="hide_on_load();" border="0" />
+<script type="text/javascript" src="#!conf!url::skins!#/#!conf!sys::skin!#/common.js"></script>
+<script type="text/javascript" src="#!conf!url::skins!#/#!conf!sys::skin!#/config.js"></script>
 </html>
 <!-- end footer -->
 
