--- a/html/skins/alteeve/select-anvil.html
+++ b/html/skins/alteeve/select-anvil.html
@@ -3,8 +3,30 @@
 <!-- start open-table -->
 <table>
 	<tr>
-		<td colspan="4">
-			<b>#!string!title_0001!#</b>
+		<td colspan="5" class="highlight_ready_bold">
+			#!string!title_0001!#
+		</td>
+	</tr>
+	<tr>
+		<td colspan="5">
+			&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td class="table_header">
+			#!string!brand_0003!#
+		</td>
+		<td class="table_header">
+			#!string!row_0023!#
+		</td>
+		<td class="table_header">
+			#!string!row_0021!#
+		</td>
+		<td class="table_header">
+			#!string!row_0156!#
+		</td>
+		<td class="table_header">
+			#!string!row_0157!#
 		</td>
 	</tr>
 <!-- end open-table -->
@@ -32,6 +54,9 @@
 			#!replace!description!#
 		</td>
 		<td>
+			#!replace!configure!#
+		</td>
+		<td>
 			#!replace!url!#
 		</td>
 	</tr>
@@ -39,11 +64,40 @@
 
 <!-- start close-table -->
 	<tr>
-		<td>
+		<td colspan="5">
+			&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			<a href="?config=true&anvil=new">#!string!row_0017!#</a>
+		</td>
+		<td colspan="3">
+			#!string!message_0343!#
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			<a href="?config=true&task=create-install-manifest">#!string!row_0158!#</a>
+		</td>
+		<td colspan="3">
+			#!string!message_0345!#
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
 			<a href="?config=true">#!string!row_0002!#</a>
 		</td>
 		<td colspan="3">
 			#!string!message_0002!#
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			<a href="?config=true&task=archive">#!string!button_0040!#</a>
+		</td>
+		<td colspan="3">
+			#!string!message_0344!#
 		</td>
 	</tr>
 <!--	<tr>
@@ -55,7 +109,7 @@
 		</td>
 	</tr>-->
 	<tr>
-		<td colspan="4">
+		<td colspan="5">
 			&nbsp;
 		</td>
 	</tr>
