--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -1,5 +1,215 @@
 <!-- These are used when a user is configuring an Anvil! or the global values -->
 
+<!-- start install-manifest-form -->
+<table>
+	<form action="#!replace!form_file!#" method="post" name="config">
+	<tr>
+		<td colspan="4" class="highlight_ready_bold">
+			#!string!title_0149!#
+		</td>
+	</tr>
+	<tr>
+		<td colspan="4">
+			&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td colspan="4">
+			#!string!explain_0060!#
+		</td>
+	</tr>
+	<tr>
+		<td colspan="4">
+			&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td colspan="4" class="highlight_good_bold">
+			#!string!title_0150!#
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0159!#
+		</td>
+		<td>
+			<input type="text" name="anvil_prefix" id="anvil_prefix" value="#!replace!anvil_prefix!#" style="width: 200px;" tabindex="1">
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0061!#<br />
+		</td>
+		<td>
+			<a href="https://alteeve.ca/w/AN!Cluster_Tutorial_2#Node_Host_Names" targer="_new">#!string!button_0003!#</a><br />
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0161!#
+		</td>
+		<td>
+			<input type="text" name="anvil_sequence" id="anvil_sequence" value="#!replace!anvil_sequence!#" style="width: 200px;" tabindex="2">
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0063!#<br />
+		</td>
+		<td>
+			&nbsp;<br />
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0160!#
+		</td>
+		<td>
+			<input type="text" name="anvil_domain" id="anvil_domain" value="#!replace!anvil_domain!#" style="width: 200px;" tabindex="3">
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0062!#<br />
+		</td>
+		<td>
+			&nbsp;<br />
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0162!#
+		</td>
+		<td>
+			<input type="text" name="anvil_bcn_subnet_prefix" id="anvil_bcn_subnet_prefix" value="#!replace!anvil_bcn_subnet_prefix!#" style="width: 200px;" tabindex="4">
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0065!#<br />
+		</td>
+		<td>
+			&nbsp;<br />
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0163!#
+		</td>
+		<td>
+			<input type="text" name="anvil_sn_subnet_prefix" id="anvil_sn_subnet_prefix" value="#!replace!anvil_sn_subnet_prefix!#" style="width: 200px;" tabindex="5">
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0066!#<br />
+		</td>
+		<td>
+			&nbsp;<br />
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0164!#
+		</td>
+		<td>
+			<input type="text" name="anvil_ifn_subnet_prefix" id="anvil_ifn_subnet_prefix" value="#!replace!anvil_ifn_subnet_prefix!#" style="width: 200px;" tabindex="6">
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0067!#<br />
+		</td>
+		<td>
+			&nbsp;<br />
+		</td>
+	</tr>
+	<tr>
+		<td colspan="4">
+			&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td>
+			&nbsp;
+		</td>
+		<td>
+			<div class="bold_button" id="set_secondary_values">#!string!button_0046!#</div>
+		</td>
+		<td colspan="2">
+			#!string!explain_0064!#
+		</td>
+	</tr>
+	<tr>
+		<td colspan="4">
+			&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td colspan="4" class="highlight_good_bold">
+			#!string!title_0151!#
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0006!#
+		</td>
+		<td>
+			<input type="text" name="anvil_node1_name" id="anvil_node1_name" value="#!replace!anvil_node1_name!#" style="width: 200px;" tabindex="7">
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0068!#<br />
+		</td>
+		<td rowspan="2">
+			<a href="https://alteeve.ca/w/AN!Cluster_Tutorial_2#Node_Host_Names" target="_new">#!string!button_0003!#</a><br />
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0007!#
+		</td>
+		<td>
+			<input type="text" name="anvil_node2_name" id="anvil_node2_name" value="#!replace!anvil_node2_name!#" style="width: 200px;" tabindex="8">
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0069!#<br />
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0008!#
+		</td>
+		<td>
+			<input type="text" name="anvil_node1_ip" id="anvil_node1_ip" value="#!replace!anvil_node1_ip!#" style="width: 200px;" tabindex="9">
+		</td>
+		<td style="text-align: left;" rowspan="2">
+			#!string!explain_0070!#<br />
+		</td>
+		<td rowspan="2">
+			<a href="https://alteeve.ca/w/AN!Cluster_Tutorial_2#Subnets" target="_new">#!string!button_0003!#</a><br />
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0009!#
+		</td>
+		<td>
+			<input type="text" name="anvil_node2_ip" id="anvil_node2_ip" value="#!replace!anvil_node2_ip!#" style="width: 200px;" tabindex="10">
+		</td>
+	</tr>
+	
+	<tr>
+		<td colspan="4">
+			&nbsp;
+		</td>
+	</tr>
+	<tr>
+		<td colspan="4">
+			<table class="hidden_table" width="100%">
+				<tr>
+					<td width="50%" class="hidden_td">
+						&nbsp;
+					</td>
+					<td width="50%" class="hidden_td">
+						<input type="submit" name="save" id="save" value="#!string!button_0045!#" class="bold_button">
+					</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+	</form>
+</table>
+<br />
+<!-- end install-manifest-form -->
+
 <!-- start anvil-variables -->
 				<!-- Anvil! Name -->
 				<tr>
@@ -320,10 +530,10 @@
 						<table class="hidden_table" width="100%">
 							<tr>
 								<td width="50%" class="hidden_td">
-									<input type="submit" name="save" id="save" value="Save" class="bold_button">
+									#!replace!push_button!#
 								</td>
 								<td width="50%" class="hidden_td">
-									#!replace!push_button!#
+									<input type="submit" name="save" id="save" value="#!string!button_0045!#" class="bold_button">
 								</td>
 							</tr>
 						</table>
