Finished the initial config manifest form and supporting jquery.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -571,6 +571,36 @@
 			<a href="https://alteeve.ca/w/AN!Cluster_Tutorial_2#Subnets" target="_new">#!string!button_0003!#</a><br />
 		</td>
 	</tr>
+	<!-- PDU 1 Outlet ? -->
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0192!#
+		</td>
+		<td>
+			<input type="text" name="anvil_node1_pdu1_outlet" id="anvil_node1_pdu1_outlet" value="#!replace!anvil_node1_pdu1_outlet!#" style="width: 200px;" />
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0096!#<br />
+		</td>
+		<td>
+			<a href="https://alteeve.ca/w/AN!Cluster_Tutorial_2#Why_Switched_PDUs.3F" target="_new">#!string!button_0003!#</a><br />
+		</td>
+	</tr>
+	<!-- PDU 2 Outlet ? -->
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0193!#
+		</td>
+		<td>
+			<input type="text" name="anvil_node1_pdu2_outlet" id="anvil_node1_pdu2_outlet" value="#!replace!anvil_node1_pdu2_outlet!#" style="width: 200px;" />
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0097!#<br />
+		</td>
+		<td>
+			<a href="https://alteeve.ca/w/AN!Cluster_Tutorial_2#Why_Switched_PDUs.3F" target="_new">#!string!button_0003!#</a><br />
+		</td>
+	</tr>
 	<!-- Node 2 -->
 	<tr>
 		<td colspan="2" class="highlight_good_bold" colspan="2">
@@ -653,6 +683,36 @@
 		</td>
 		<td>
 			<a href="https://alteeve.ca/w/AN!Cluster_Tutorial_2#Subnets" target="_new">#!string!button_0003!#</a><br />
+		</td>
+	</tr>
+	<!-- PDU 1 Outlet ? -->
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0192!#
+		</td>
+		<td>
+			<input type="text" name="anvil_node2_pdu1_outlet" id="anvil_node2_pdu1_outlet" value="#!replace!anvil_node2_pdu1_outlet!#" style="width: 200px;" />
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0098!#<br />
+		</td>
+		<td>
+			<a href="https://alteeve.ca/w/AN!Cluster_Tutorial_2#Why_Switched_PDUs.3F" target="_new">#!string!button_0003!#</a><br />
+		</td>
+	</tr>
+	<!-- PDU 2 Outlet ? -->
+	<tr>
+		<td class="highlight_good_bold">
+			#!string!row_0193!#
+		</td>
+		<td>
+			<input type="text" name="anvil_node2_pdu2_outlet" id="anvil_node2_pdu2_outlet" value="#!replace!anvil_node2_pdu2_outlet!#" style="width: 200px;" />
+		</td>
+		<td style="text-align: left;">
+			#!string!explain_0099!#<br />
+		</td>
+		<td>
+			<a href="https://alteeve.ca/w/AN!Cluster_Tutorial_2#Why_Switched_PDUs.3F" target="_new">#!string!button_0003!#</a><br />
 		</td>
 	</tr>
 	
